fix pict avatar

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <aside class="sidebar">
       <div class="user">
         <a href="#" class="user-info">
-          <img width="40" height="40" src="/img/avatar.jfif" alt="photo: user" class="user-avatar">
+          <img width="40" height="40" src="./img/avatar.jfif" alt="photo: user" class="user-avatar">
           <span class="user-name">FlameFlashy</span>
         </a>
         <a href="#" class="exit">
